--- a/README
+++ b/README
@@ -1,6 +1,48 @@
+# README!
+
+In order to run Common Knowledge you need a server (we recommend Ubuntu 12.04 at this point) that is able
+to run the database (MongoDB),
+Rollcall (https://github.com/educoder/rollcall/wiki),
+a XMPP server (Prosody or Ejabberd), and
+the REST interface for the database - Drowsy Dromedary (https://github.com/zuk/DrowsyDromedary).
+
+Drowsy Dromodary, Rollcall, and the Agents require Ruby 1.9.3 to be installed.
+
+## Using Grunt to do the Grunt work
+We want some JS files to pass JSHint, have coffee script that needs to be compiled into JS, and SCSS files that should
+be transformed into CSS. We use grunt for this.
+
+Install the grunt command line interface (CLI):
+`npm install -g grunt-cli`
+
+Running `grunt` on the command line will say that grunt is missing stuff.
+
+The dependencies for gruntare added to the package.json file so the install should be easy by issuing (in the ck folder)
+
+`npm install`
+
+Once the install is done (without errors) you should be able to do all the mentioned tasks by issuing (in the ck folder)
+
+`grunt`
+
+Try removing a ; in the mobile JS files and you should get a JSHint error.
+
+## Agents
+Make sure you have Ruby 1.9.3 installed and add the users *eventlogger* and *choreographer* to Rollcall.
+Make sure to use the hashed password in the daemon.rb file.
+Furthermore, make sure that the mongo database works fine and can be called by typing "mongo" in the console.
+
+To start the agent go to the common knowledge folder (in a terminal) and change into the agent folder. Now type
+bundle exec ruby daemon.rb
+
+to stop the agent type:
+kill `cat pids/ck.pid`
+
+
+#LICENSE
 This software is available under the MIT licence (http://www.opensource.org/licenses/mit-license.php)
 
-Copyright (c) 2011 -- Jim Slotta - Ontario Institute for Studies in Education (OISE) at University of Toronto
+### Copyright (C) 2013  Jim Slotta, [Armin Krauss](https://github.com/mackrauss "mackrauss' github profile"), [Colin McCann](https://github.com/colinmccann "Colin's github profile") and [Matt Zukowski](https://github.com/zuk "zuk's github profile") - Ontario Institute for Studies in Education (OISE) at University of Toronto
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 
